--- a/Part 4/package.json
+++ b/Part 4/package.json
@@ -4,7 +4,7 @@
   "description": "part 4 ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js "
   },
@@ -18,6 +18,10 @@
   },
   "devDependencies": {
     "eslint": "^8.21.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
