--- a/Part 4/package.json
+++ b/Part 4/package.json
@@ -4,9 +4,9 @@
   "description": "part 4 ",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "start": "node index.js",
-    "dev": "nodemon index.js "
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js "
   },
   "author": "orzechovski",
   "license": "ISC",
@@ -18,9 +18,11 @@
     "mongoose": "^6.5.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
     "jest": "^28.1.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   },
   "jest": {
     "testEnvironment": "node"
