--- a/Part 5/package.json
+++ b/Part 5/package.json
@@ -15,6 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
     "eslint": "eslint ."
   },
   "eslintConfig": {
@@ -40,6 +41,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "cypress": "^10.7.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.9.0",
     "jest-watch-typeahead": "^0.6.5"
   }
