--- a/Part 6/redux-anecdotes/package.json
+++ b/Part 6/redux-anecdotes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unicafe-redux",
+  "name": "redux-anecdotes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -36,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "deep-freeze": "^0.0.1"
   }
 }
