--- a/Part 7/bloglist/front-end/package.json
+++ b/Part 7/bloglist/front-end/package.json
@@ -46,9 +46,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.8",
     "cypress": "^10.7.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.9.0",
-    "jest-watch-typeahead": "^0.6.5"
+    "jest-watch-typeahead": "^0.6.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
